--- a/index.html
+++ b/index.html
@@ -20,12 +20,16 @@
     <section class="header-section">
         <div class="container">
             <div class="row">
-                <div class="col-lg-2">
+                <div class="col-xl-2 col-lg-2 col-md-3 col-sm-5">
                     <div class="logo">
                         <img src="images/Logo.png" alt="logo">
                     </div>                    
                 </div>
-                <div class="col-lg-10">
+                <div class="col-xl-10 col-lg-10 col-md-9 col-sm-7">
+                    <div class="meun-icon">
+                        <i class="fas fa-align-right"></i>                                   
+                    </div>
+                    
                     <nav class="meun">
                         <ul>
                             <li><a href="#">Books</a></li>
